--- a/source/webapp/templates/base.html
+++ b/source/webapp/templates/base.html
@@ -12,9 +12,9 @@
 </head>
 <body>
 <div class="container">
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav class="navbar navbar-expand-lg" style="background-color: lavender">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Exam_9</a>
+    <a class="navbar-brand" href="{% url 'webapp:index' %}">Exam 9</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
             aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -22,10 +22,10 @@
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">?</a>
+          <a class="nav-link" aria-current="page" href="{% url 'webapp:image_create' %}">Добавить</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="{% url 'accounts:registration' %}">Регистрация</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'accounts:login' %}">Войти</a>
@@ -41,7 +41,8 @@
     </div>
   </div>
 </nav>
-
+    {% block content %}
+    {% endblock %}
 </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
