--- a/source/webapp/templates/base.html
+++ b/source/webapp/templates/base.html
@@ -21,6 +21,9 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="{% url 'webapp:album_view' %}">Альбомы</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link" aria-current="page" href="{% url 'webapp:image_create' %}">Добавить</a>
         </li>
