--- a/source/webapp/templates/album_temp/album_index.html
+++ b/source/webapp/templates/album_temp/album_index.html
@@ -1,19 +1,23 @@
 {% extends 'base.html' %}
 
+{% block nav %}
+    <li class="nav-item">
+        <a class="nav-link" aria-current="page" href="{% url 'webapp:album_create' %}">Добавить альбом</a>
+    </li>
+{% endblock %}
+
 {% block content %}<br>
     <div class="row">
-    {% for album in albums %}
+         {% for album in albums %}
           <div class="col-12 col-md-6 col-lg-4">
-            <div class="card" style="align-items: center">
-                <a href="{% url 'webapp:album_detail_view' album.pk %}" style="text-decoration: none">
+            <div class="card" style="border:0;align-items: center">
+                <a href="{% url 'webapp:album_detail' album.pk %}" style="text-decoration: none">
                     <h3>{{ album.image_name }}</h3></a>
-                <p>{{ album.description }}</p>
                 <p>{{ album.album_author }}</p>
                 <p>{{ album.created_at_album }}</p>
-              <div class="card-body">
-              </div>
             </div><br>
           </div>
     {% endfor %}
     </div>
 {% endblock %}
+
