--- a/source/webapp/templates/album_temp/detail_album_view.html
+++ b/source/webapp/templates/album_temp/detail_album_view.html
@@ -1,8 +1,29 @@
 {% extends 'base.html' %}
+{% block nav %}
+    <li class="nav-item">
+      <a class="nav-link" aria-current="page" href="{% url 'webapp:album_update' album.pk %}">Изменить</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" aria-current="page" href="{% url 'webapp:album_delete' album.pk %}">Удалить</a>
+    </li>
+{% endblock %}
 
-{% block content %}
-<h5>{{ album.image_name }}</h5>
-    <h6>{{ album.description }}</h6>
-    <p>{{ album.album_author }}</p>
-    <p>{{ album.created_at_album }}</p>
-{% endblock%}
+{% block content %}<br>
+    <div class="row">
+    <h2>Альбом: {{  album.image_name }}</h2>
+    <p>{{ album.description }}</p>
+    {% if not album.images_album.all %}
+        <h5>{{ 'Альбом пока пуст' }}</h5>
+    {% endif %}
+         {% for album in album.images_album.all %}
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="card" style="border:0; align-items: center">
+                <img src="{{ album.photo.url }}" style="max-width: 250px">
+                   <h3>{{ album.signature }}</h3>
+                    <p>{{ album.author }}</p>
+                    <p>{{ album.created_at }}</p>
+            </div>
+          </div>
+    {% endfor %}
+    </div>
+{% endblock %}
